...
    Column(
        horizontalAlignment = Alignment.CenterHorizontally,
        modifier = Modifier.fillMaxSize()
    ) {
        Title(
            text = when(state) {
                is AuthContract.AuthState.OnSignUp -> "Регистрация"
                is AuthContract.AuthState.OnResetPassword -> "Восстановление пароля"
                else -> "Платформа для поиска работы"
            },
            modifier = Modifier
                .fillMaxWidth()
                .fillMaxHeight(0.4f)
        )
...
