...
            Row(
                modifier = Modifier.fillMaxWidth(),
                horizontalArrangement = Arrangement.Center
            ) {
                Button(
                    onClick = { onConfirm(password) },
                    modifier = Modifier.fillMaxWidth(0.6f).testTag("settings_password_form_button")
                ) {
                    Text(text = "Подтвердить")
                }
            }
        },
        icon = {
...
                        text = password,
                        icon = Icons.Rounded.Password,
                        placeholder = "Ваш пароль",
                        isError = isError,
                        supportingText = "Введен неверный пароль",
                        onUpdate = { password = it },
                        modifier = Modifier.testTag("settings_confirm_password")
                    )
                }
            }
        },
        modifier = modifier
    )
...
